--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,41 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: 'Berkeley Mono';
+    src: url('../static/fonts/berkeley-mono/BerkeleyMono-Regular.woff2') format('woff2'),
+    url('../static/fonts/berkeley-mono/BerkeleyMono-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Berkeley Mono';
+    src: url('../static/fonts/berkeley-mono/BerkeleyMono-Bold.woff2') format('woff2'),
+    url('../static/fonts/berkeley-mono/BerkeleyMono-Bold.woff') format('woff');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Berkeley Mono';
+    src: url('../static/fonts/berkeley-mono/BerkeleyMono-Italic.woff2') format('woff2'),
+    url('../static/fonts/berkeley-mono/BerkeleyMono-Italic.woff') format('woff');
+    font-weight: 400;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Berkeley Mono';
+    src: url('../static/fonts/berkeley-mono/BerkeleyMono-BoldItalic.woff2') format('woff2'),
+    url('../static/fonts/berkeley-mono/BerkeleyMono-BoldItalic.woff') format('woff');
+    font-weight: 700;
+    font-style: italic;
+}
+
+@layer base {
+    html {
+        font-family: 'Berkeley Mono', monospace;
+    }
+}
