--- a/src/app.css
+++ b/src/app.css
@@ -3,39 +3,57 @@
 @tailwind utilities;
 
 @font-face {
-    font-family: 'Berkeley Mono';
-    src: url('../static/fonts/berkeley-mono/BerkeleyMono-Regular.woff2') format('woff2'),
-    url('../static/fonts/berkeley-mono/BerkeleyMono-Regular.woff') format('woff');
-    font-weight: 400;
-    font-style: normal;
+	font-family: 'Berkeley Mono';
+	src: url('../static/fonts/berkeley-mono/BerkeleyMono-Regular.woff2') format('woff2'),
+		url('../static/fonts/berkeley-mono/BerkeleyMono-Regular.woff') format('woff');
+	font-weight: 400;
+	font-style: normal;
 }
 
 @font-face {
-    font-family: 'Berkeley Mono';
-    src: url('../static/fonts/berkeley-mono/BerkeleyMono-Bold.woff2') format('woff2'),
-    url('../static/fonts/berkeley-mono/BerkeleyMono-Bold.woff') format('woff');
-    font-weight: 700;
-    font-style: normal;
+	font-family: 'Berkeley Mono';
+	src: url('../static/fonts/berkeley-mono/BerkeleyMono-Bold.woff2') format('woff2'),
+		url('../static/fonts/berkeley-mono/BerkeleyMono-Bold.woff') format('woff');
+	font-weight: 700;
+	font-style: normal;
 }
 
 @font-face {
-    font-family: 'Berkeley Mono';
-    src: url('../static/fonts/berkeley-mono/BerkeleyMono-Italic.woff2') format('woff2'),
-    url('../static/fonts/berkeley-mono/BerkeleyMono-Italic.woff') format('woff');
-    font-weight: 400;
-    font-style: italic;
+	font-family: 'Berkeley Mono';
+	src: url('../static/fonts/berkeley-mono/BerkeleyMono-Italic.woff2') format('woff2'),
+		url('../static/fonts/berkeley-mono/BerkeleyMono-Italic.woff') format('woff');
+	font-weight: 400;
+	font-style: italic;
 }
 
 @font-face {
-    font-family: 'Berkeley Mono';
-    src: url('../static/fonts/berkeley-mono/BerkeleyMono-BoldItalic.woff2') format('woff2'),
-    url('../static/fonts/berkeley-mono/BerkeleyMono-BoldItalic.woff') format('woff');
-    font-weight: 700;
-    font-style: italic;
+	font-family: 'Berkeley Mono';
+	src: url('../static/fonts/berkeley-mono/BerkeleyMono-BoldItalic.woff2') format('woff2'),
+		url('../static/fonts/berkeley-mono/BerkeleyMono-BoldItalic.woff') format('woff');
+	font-weight: 700;
+	font-style: italic;
 }
 
+@font-face {
+	font-family: 'Nasalization';
+	src: url('../static/fonts/nasalization/nasalization-rg-webfont.woff2') format('woff2'),
+		url('../static/fonts/nasalization/nasalization-rg-webfont.woff') format('woff');
+	font-weight: 400;
+	font-style: normal;
+}
+
+/* used Nasalization for headings and Berkeley Mono for everything else*/
 @layer base {
-    html {
-        font-family: 'Berkeley Mono', monospace;
-    }
+	html {
+		font-family: 'Berkeley Mono', monospace;
+	}
+
+	h1,
+	h2,
+	h3,
+	h4,
+	h5,
+	h6 {
+		font-family: 'Nasalization', sans-serif;
+	}
 }
